# satysfi-playground

./: .gitignore  arion-compose.nix  arion-pkgs.nix  build.sh  deploy.sh  flake.nix  main.pony  nixos-configuration.nix  persist.sh  run.sh  satysfi-docker.nix  service.nix  test.nix  up.sh
.github/workflows/: main.yml
api/: Cargo.toml
api/src/: main.rs
client/: Cargo.toml  shell.nix
client/src/: lib.rs
docker/: Dockerfile
examples/hello-playground/: input.saty
frontend/: package-lock.json  package.json
frontend/components/: EditorPage.tsx
frontend/lib/: getEditorPageProps.ts
frontend/pages/: _app.tsx  index.tsx
frontend/pages/share/: [buildId].tsx
frontend/styles/: Home.module.css
server/: Cargo.toml  index.html  run.sh
server/assets/: client.js  client.wasm
server/src/: endpoint.rs  main.rs  realtime.rs  util.rs
server/src/endpoint/: compile.rs  healthcheck.rs  persist.rs
server/templates/: index.html  index.tera  realtime.html  realtime.tera
subject/: Cargo.toml
subject/src/: lib.rs
terraform/: .gitignore  .terraform.lock.hcl  acm.tf  cloudfront.tf  lb.tf  machine.tf  main.tf  output.json  route53.tf  s3.tf  vpc.tf
