[package]
name = "client"
version = "0.1.0"
authors = ["pandaman64 <kointosudesuyo@infoseek.jp>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
ot = { git = "https://github.com/pandaman64/ot.git" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
failure = "0.1.1"
failure_derive = "0.1.1"
futures = "0.2.0-alpha"
futures-util = "0.2.0-alpha"
stdweb = "0.4.2"
