[package]
name = "server"
version = "0.1.0"
authors = ["pandaman64 <kointosudesuyo@infoseek.jp>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

actix-web = "0.7"

tera = "0.11"

log = "0.4.6"
env_logger = "0.5"

sha2 = "0.7.0"

failure = "0.1.1"
failure_derive = "0.1.1"

uuid = { version = "0.6.2", features = ["v4", "serde"] }

lazy_static = "1.0"

tokio-process = "0.2.3"
tokio-timer = "0.2.8"
tokio = { version = "0.1.18", features = ["async-await-preview"] }

[dependencies.futures-preview]
version = "0.3.0-alpha.14"
features = ["compat", "io-compat"]

[patch.crates-io]
tokio = { git = "https://github.com/tokio-rs/tokio.git" }
tokio-async-await = { git = "https://github.com/tokio-rs/tokio.git" }
