[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.2.0"
actix-web = "4.0.0-beta.9"
aws-config = "0.0.26-alpha"
aws-sdk-s3 = "0.0.26-alpha"
base64 = "0.13.0"
env_logger = "0.9.0"
hex = "0.4.3"
http = "0.2.5"
serde = { version = "1.0.130", features = ["derive"] }
sha2 = "0.9.8"
tempfile = "3.2.0"
tracing = "0.1.29"
