[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.0-beta.6"
actix-rt = "2.5.0"
actix-web = "4.0.0-beta.13"
aws-config = "0.2.0"
aws-sdk-s3 = "0.2.0"
base64 = "0.13.0"
env_logger = "0.9.0"
hex = "0.4.3"
http = "0.2.5"
serde = { version = "1.0.130", features = ["derive"] }
sha2 = "0.9.8"
tempfile = "3.2.0"
tracing = "0.1.29"
